# bigquiz2sample2

./: CMakeLists.txt  ModuleX.cpp  ModuleX.hpp  ModuleY.cpp  ModuleY.hpp  Observer.hpp  README.md  SettingsManager.cpp  SettingsManager.hpp  dockerfile  main.cpp  tests.cpp
